--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <h1>Review Project</h1>
-
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque similique ipsum, unde exercitationem facilis vitae.</p>
 
   <script src="script.js"></script>
 </body>
