added images and updated the UI

--- a/index.html
+++ b/index.html
@@ -1,18 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Starter</title>
-  <!-- Font awesome -->
-  <link rel="stylesheet" href="./fontawesome-free5.12.0-web/css/all.min.css">
-  <!-- Style -->
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <h1>Review Project</h1>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque similique ipsum, unde exercitationem facilis vitae.</p>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Starter</title>
+    <!-- font-awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+    />
 
-  <script src="script.js"></script>
-</body>
+    <!-- styles -->
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <main>
+      <section class="container">
+        <!-- title -->
+        <div class="title">
+          <h2>Our Reviews</h2>
+          <div class="underline"></div>
+        </div>
+        <!-- Review -->
+        <article class="review">
+          <div class="img-container">
+            <img src="./person-1.jpeg" id="person-img" alt="">
+          </div>
+          <h4 id="author">Alexis Rhodes</h4>
+          <p id="job">UX Designer</p>
+          <p id="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum eum minus voluptates ipsa natus aperiam dignissimos magnam laboriosam sequi culpa.</p>
+        </article>
+      </section>
+    </main>
+    <!-- javascript -->
+    <script src="script.js"></script>
+  </body>
 </html>
