--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
           <h4 id="author">Alexis Rhodes</h4>
           <p id="job">UX Designer</p>
           <p id="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum eum minus voluptates ipsa natus aperiam dignissimos magnam laboriosam sequi culpa.</p>
+          <!-- prev next buttons -->
+          <div class="button-container">
+            <button class="prev-btn">
+              <i class="fas fa-chevron-right"></i>
+            </button>
+          </div>
         </article>
       </section>
     </main>
