--- a/index.html
+++ b/index.html
@@ -32,9 +32,14 @@
           <!-- prev next buttons -->
           <div class="button-container">
             <button class="prev-btn">
+              <i class="fas fa-chevron-left"></i>
+            </button>
+            <button class="prev-btn">
               <i class="fas fa-chevron-right"></i>
             </button>
           </div>
+          <!-- random button -->
+          <button class="random-btn">Suprise Me</button>
         </article>
       </section>
     </main>
